# PrntScPuller

./: CMakeLists.txt  README.md
src/: generator.h  main.cpp  parser.h
